RESOLVED FIXED313371
REGRESSION(309943@main): Drag-and-drop preview does not lift from correct image location
https://bugs.webkit.org/show_bug.cgi?id=313371
Summary REGRESSION(309943@main): Drag-and-drop preview does not lift from correct ima...
Abrar Rahman Protyasha
Reported 2026-04-26 16:54:42 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2026-04-26 17:16:35 PDT
EWS
Comment 2 2026-04-28 01:03:58 PDT
Committed 312186@main (a50da550f7f0): <https://commits.webkit.org/312186@main> Reviewed commits have been landed. Closing PR #63651 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.